--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Rescate Animal Granada</title>
 </head>
 <body>
-    
+    <a href="./contacto.html">Contacto</a>
+    <a href="./donaciones.html">Donaciones</a>
+    <a href="./catalogo.html">Catálogo</a>
+    <a href="./feedback.html">Padres Satisfechos</a>
 </body>
 </html>
