--- a/catalogo.html
+++ b/catalogo.html
@@ -17,46 +17,46 @@
         <a href="./feedback.html">Padres Satisfechos</a>
     </nav>
     <main>
-        <img src="./img/Dafne.jpeg">
-        <p>Lola - La Juguetona:<br>
+        <div><img src="./img/Dafne.jpeg">
+        <p><b>Lola - La Juguetona:</b><br>
             Lola, una perrita mestiza de tamaño mediano, es la compañera perfecta para aquellos que aman la diversión.
-            Su cola siempre está en movimiento y su energía inagotable la convierte en la candidata ideal para juegos al aire libre.</p>
-        <img src="./img/Desider.jpeg">
-        <p>Cleo - La Exploradora Curiosa:<br>
+            Su cola siempre está en movimiento y su energía inagotable la convierte en la candidata ideal para juegos al aire libre.</p></div>
+        <div><img src="./img/Desider.jpeg">
+        <p><b>Cleo - La Exploradora Curiosa:</b><br>
             Cleo, una mezcla de Terrier, es una intrépida exploradora. Le encanta descubrir nuevos lugares y oler todo a su alrededor. 
-            ¿Buscas un compañero para tus aventuras? Cleo es la elección perfecta.</p>
-        <img src="./img/Eros.jpeg">
-        <p>Max - El Caballero Educado:<br>
+            ¿Buscas un compañero para tus aventuras? Cleo es la elección perfecta.</p></div>
+        <div><img src="./img/Eros.jpeg">
+        <p><b>Max - El Caballero Educado:</b><br>
             Max, un elegante Labrador Retriever, es un verdadero caballero. Su comportamiento educado y su amor incondicional 
-            lo hacen adecuado para hogares con niños. Max está ansioso por ser parte de una familia cariñosa.</p>
-        <img src="./img/Kala.jpeg">
-        <p>Daisy - La Dulce Compañera:<br>
+            lo hacen adecuado para hogares con niños. Max está ansioso por ser parte de una familia cariñosa.</p></div>
+        <div><img src="./img/Kala.jpeg">
+        <p><b>Daisy - La Dulce Compañera:</b><br>
             Daisy, una adorable Cocker Spaniel, es una verdadera dulzura. Su naturaleza amorosa la convierte en la compañera 
-            perfecta para noches acogedoras en casa. ¡Prepárate para recibir muchos lametazos y abrazos!</p>
-        <img src="./img/Lavinia.jpeg">
-        <p>Mia - La Mimosa de Ojos Brillantes:<br>
+            perfecta para noches acogedoras en casa. ¡Prepárate para recibir muchos lametazos y abrazos!</p></div>
+        <div><img src="./img/Lavinia.jpeg">
+        <p><b>Mia - La Mimosa de Ojos Brillantes:</b><br>
             Mia, una pequeña Chihuahua, es una bolita de amor con ojos brillantes. A pesar de su tamaño, tiene un corazón enorme 
-            y le encanta acurrucarse en el regazo de sus dueños. ¡Prepárate para recibir toneladas de amor compacto!</p>
-        <img src="./img/Lewis.jpeg">
-        <p>Rocky - El Atleta Ágil:<br>
+            y le encanta acurrucarse en el regazo de sus dueños. ¡Prepárate para recibir toneladas de amor compacto!</p></div>
+        <div><img src="./img/Lewis.jpeg">
+        <p><b>Rocky - El Atleta Ágil:</b><br>
             Rocky, un Border Collie enérgico, es el compañero ideal para los amantes del ejercicio. Su agilidad y entusiasmo hacen 
-            de él el compañero perfecto para correr, jugar a la pelota y cualquier actividad al aire libre.</p>
-        <img src="./img/Mela.jpeg">
-        <p>Zara - La Rescatada con Gratitud:<br>
+            de él el compañero perfecto para correr, jugar a la pelota y cualquier actividad al aire libre.</p></div>
+        <div><img src="./img/Mela.jpeg">
+        <p><b>Zara - La Rescatada con Gratitud:</b><br>
             Zara, una perrita mestiza de apariencia única, fue rescatada de situaciones difíciles y ahora está lista para dar y recibir
-             amor. Su gratitud se refleja en sus ojos, y ella está ansiosa por encontrar un hogar cariñoso.</p>
-        <img src="./img/Milo.jpeg">
-        <p>Bobby - El Protector Leal:<br>
+             amor. Su gratitud se refleja en sus ojos, y ella está ansiosa por encontrar un hogar cariñoso.</p></div>
+        <div><img src="./img/Milo.jpeg">
+        <p><b>Bobby - El Protector Leal:</b><br>
             Bobby, un pastor alemán mezclado, es un leal protector. Su inteligencia y lealtad hacen de él un defensor 
-            fiable de su hogar y su familia. Además, es muy cariñoso con aquellos que le brindan amor.</p>
-        <img src="./img/Neska.jpeg">
-        <p>Luna - La Dama Tranquila:<br>
+            fiable de su hogar y su familia. Además, es muy cariñoso con aquellos que le brindan amor.</p></div>
+        <div><img src="./img/Neska.jpeg">
+        <p><b>Luna - La Dama Tranquila:</b><br>
             Luna, de pelaje chocolate y ojos expresivos, es una Labrador Retriever de tamaño mediano que cautiva con su suave temperamento. 
-            Esta perra elegante es la compañera perfecta para hogares que valoran la tranquilidad y la conexión emocional.</p>
-        <img src="./img/Pikachu.jpeg">
-        <p>Rocco - El Anciano Sabio:<br>
+            Esta perra elegante es la compañera perfecta para hogares que valoran la tranquilidad y la conexión emocional.</p></div>
+        <div><img src="./img/Pikachu.jpeg">
+        <p><b>Rocco - El Anciano Sabio:</b><br>
             Rocco, un sabio Golden Retriever de edad avanzada, busca un hogar tranquilo donde pueda disfrutar de su merecido descanso. 
-            Su experiencia de vida y calma lo convierten en el compañero perfecto para aquellos que buscan la serenidad en un perro mayor.</p>
+            Su experiencia de vida y calma lo convierten en el compañero perfecto para aquellos que buscan la serenidad en un perro mayor.</p></div>
     </main>
 </body>
 </html>
