--- a/catalogo.html
+++ b/catalogo.html
@@ -14,7 +14,7 @@
         <a href="./contacto.html">Contacto</a>
         <a href="./donaciones.html">Donaciones</a>
         <a href="./catalogo.html">Catálogo</a>
-        <a href="./feedback.html">Padres Satisfechos</a>
+        <a href="./feedback.html">Guía Adoptar</a>
     </nav>
     <main>
         <div><img src="./img/Dafne.jpeg">
