--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="stylelsheet" rel="text/css" href="css.css"> 
+    <link type="text/css" rel="stylesheet" href="css/contactoStyle.css"> 
     <title>Contacto</title>
 </head>
 <body>
