--- a/catalogo.html
+++ b/catalogo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-
+        <h1>Rescate Animal Granada</h1>
     </header>
     <nav>
         <a href="./contacto.html">Contacto</a>
