mod css contacto

--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Rescate Animal Granada</h1>
+        <a href="index.html"><h1>Rescate Animal Granada</h1></a>
     </header>
     <nav>
         <a href="./contacto.html">Contacto</a>
@@ -56,8 +56,7 @@
             </form>
         </section>
         <section>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3180.603379455895!2d-3.6818520000000006!3d37.13835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzfCsDA4JzE4LjEiTiAzwrA0MCc1NC43Ilc!5e0!3m2!1ses!2ses!4v1709926531645!5m2!1ses!2ses" width="600" height="450" style="border:1px solid black; border-radius: 10%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </section>
+            <p><iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3180.603379455895!2d-3.6818520000000006!3d37.13835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzfCsDA4JzE4LjEiTiAzwrA0MCc1NC43Ilc!5e0!3m2!1ses!2ses!4v1709926531645!5m2!1ses!2ses" width="600" height="450" style="border:1px solid black; border-radius: 10%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>        </section>
     </main>
     <footer>
 
