--- a/donaciones.html
+++ b/donaciones.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/stylescatalogo.css">
 </head>
 <body>
+    <header>
+        <a href="index.html"><h1>Rescate Animal Granada</h1></a>
+    </header>
     <nav>
         <a href="./contacto.html">Contacto</a>
         <a href="./donaciones.html">Donaciones</a>
