--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <article>
             <section>
                 <h2>
-                    Fotos del refugio
+                    Fotos del refugio y eso 
                 </h2>
             </section>
             <section class="fotos">
