--- a/feedback.html
+++ b/feedback.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/decor.css">
+    <link rel="stylesheet" href="css/stylescatalogo.css">
+
 </head>
 <body>
-    
+    <header>
+        <a href="index.html"><h1>Rescate Animal Granada</h1></a>
+    </header>
+    <nav>
+        <a href="./contacto.html">Contacto</a>
+        <a href="./donaciones.html">Donaciones</a>
+        <a href="./catalogo.html">Catálogo</a>
+        <a href="./feedback.html">Guia Adoptar</a>
+    </nav>
+    <main>
+        <section class="primer">
+            <h2>Guias de expertos</h2>
+            <p class="guiaexp">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi consectetur quae reprehenderit quam corporis totam nam animi nobis non quibusdam quo illo dolor, rerum expedita hic quidem reiciendis sit? Doloremque?</p>
+        </section>
+    </main>
 </body>
 </html>
