--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="./contacto.html">Contacto</a>
             <a href="./donaciones.html">Donaciones</a>
             <a href="./catalogo.html">Catálogo</a>
-            <a href="./feedback.html">Padres Satisfechos</a>
+            <a href="./feedback.html">Guia Adoptar</a>
         </nav>
     
     <main>
