--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><h1>Rescate Animal Granada</h1></a>
+        <a href="index.html"><h1>Guia adoptar</h1></a>
     </header>
     <nav>
         <a href="./contacto.html">Contacto</a>
