mod titulo y nav

--- a/contacto.html
+++ b/contacto.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><h1>Guia adoptar</h1></a>
+        <a href="index.html"><h1>Rescate Animal Granada</h1></a>
     </header>
     <nav>
         <a href="./contacto.html">Contacto</a>
         <a href="./donaciones.html">Donaciones</a>
         <a href="./catalogo.html">Catálogo</a>
-        <a href="./feedback.html">Padres Satisfechos</a>
+        <a href="./feedback.html">Guia Adoptar</a>
     </nav>
     <main>
         <section>
