--- a/feedback.html
+++ b/feedback.html
@@ -15,7 +15,7 @@
         <a href="./contacto.html">Contacto</a>
         <a href="./donaciones.html">Donaciones</a>
         <a href="./catalogo.html">Catálogo</a>
-        <a href="./feedback.html">Guia Adoptar</a>
+        <a href="./feedback.html">Guía Adoptar</a>
     </nav>
     <main>
         <section class="primer">
